Updated Swagger annotations
