# app/Http/Controllers/Swagger/LessonController.php
@@ -35,7 +35,6 @@ use App\Http\Controllers\Controller;
  *                   @OA\Property(property="id", type="integer", example=1),
  *                   @OA\Property(property="created_at", type="string", example="2024-12-20 17:49:36"),
  *                   @OA\Property(property="updated_at", type="string", example="2024-12-20 17:49:36"),
- *                   @OA\Property(property="day_of_week", type="string", example="Понедельник"),
  *                   @OA\Property(property="time", type="string", format="time", example="13:00"),
  *                   @OA\Property(property="number_of_lesson", type="string", example="1"),
  *                   @OA\Property(property="cabinet", type="string", example="21"),
@@ -87,7 +86,6 @@ use App\Http\Controllers\Controller;
  *                @OA\Property(property="id", type="integer", example=1),
  *                @OA\Property(property="created_at", type="string", example="2024-12-20 17:49:36"),
  *                @OA\Property(property="updated_at", type="string", example="2024-12-20 17:49:36"),
- *                @OA\Property(property="day_of_week", type="string", example="Понедельник"),
  *                @OA\Property(property="time", type="string", format="time", example="13:00"),
  *                @OA\Property(property="number_of_lesson", type="string", example="1"),
  *                @OA\Property(property="cabinet", type="string", example="21"),
@@ -136,7 +134,6 @@ use App\Http\Controllers\Controller;
  *                 @OA\Property(property="id", type="integer", example=1),
  *                 @OA\Property(property="created_at", type="string", example="2024-12-20 17:49:36"),
  *                 @OA\Property(property="updated_at", type="string", example="2024-12-20 17:49:36"),
- *                 @OA\Property(property="day_of_week", type="string", example="Понедельник"),
  *                 @OA\Property(property="time", type="string", format="time", example="13:00"),
  *                 @OA\Property(property="number_of_lesson", type="string", example="1"),
  *                 @OA\Property(property="cabinet", type="string", example="21"),
